# Teensy4IoIoOtg

./: .gitmodules  CMakeLists.txt  README.md  SECURITY.md  configure.sh  run.sh  setup.sh
src/: main.cpp
src/ADC/: CMakeLists.txt
src/SPI/: CMakeLists.txt
src/USBHost_t36/: CMakeLists.txt
src/Wire/: CMakeLists.txt
src/app_layer_v1/: CMakeLists.txt  adc.cpp  adc.h  byte_queue.cpp  byte_queue.h  connection.cpp  connection.h  digital.cpp  digital.h  features.cpp  features.h  field_accessors.h  i2c.cpp  i2c.h  icsp.cpp  icsp.h  incap.cpp  incap.h  logging.cpp  logging.h  pins.cpp  pins.h  platform.h  pp_util.h  protocol.cpp  protocol.h  protocol_defs.h  pwm.cpp  pwm.h  queue.h  sequence.h  sequencer.cpp  sequencer.h  sequencer_protocol.cpp  sequencer_protocol.h  spi.cpp  spi.h  sync.cpp  sync.h  timers.cpp  (+7 more)
src/core/: CMakeLists.txt
src/test/: CMakeLists.txt  empty.cpp  main.cpp
